LDEV-4921 Allow hiding question titles in Learner for Scratchie